fixed z-index btn return to top

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -158,6 +158,7 @@
     -ms-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease;
+    z-index: 3;
 }
 #return-to-top i {
     color: #fff;
